modificacion en la ruta de signup y se agrego la ruta tasks y el atributo name a cada ruta

--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -6,6 +6,10 @@
     <button>Register</button>
 </form>
 
-{{errorUser}}
+{% if errorUser %}
+    <p >{{ errorUser }}</p>
+{% endif %}
 
-{{errorPasswords}}
+{% if errorPasswords %}
+    <p>{{ errorPasswords }}</p>
+{% endif %}
