--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -11,9 +11,10 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/tasks">Tasks</a></li>
-            <li><a href="/signup">SignUp</a></li>
             {%if user.is_authenticated%}
                 <li><a href="/logout">Logout</a></li>
+            {%else%}
+                <li><a href="/signup">SignUp</a></li>
             {%endif%}
         </ul>
     </nav>
