--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -12,9 +12,10 @@
             <li><a href="/">Home</a></li>
             <li><a href="/tasks">Tasks</a></li>
             {%if user.is_authenticated%}
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="/logout">Log out</a></li>
             {%else%}
-                <li><a href="/signup">SignUp</a></li>
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/signIn">Sign In</a></li>
             {%endif%}
         </ul>
     </nav>
