--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -8,17 +8,35 @@
 </head>
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/tasks">Tasks</a></li>
-            {%if user.is_authenticated%}
-                <li><a href="/logout">Log out</a></li>
-            {%else%}
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/signIn">Sign In</a></li>
-            {%endif%}
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">App</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/tasks">Tasks</a>
+              </li>
+              {%if user.is_authenticated%}
+                <li class="nav-item">
+                    <li><a class="nav-link" href="/logout">Log out</a></li>
+                </li>
+                {%else%}
+                <li class="nav-item">
+                    <li><a class="nav-link" href="/signIn">Sign In</a></li>
+                </li>
+                <li class="nav-item">
+                    <li><a class="nav-link" href="/signup">Sign Up</a></li>
+                </li>
+              {%endif%}
+            </ul>
+          </div>
+        </div>
     </nav>
 
     {%block content%}
