--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -8,30 +8,30 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-primary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">App</a>
+          <a class="navbar-brand text-light" href="/">App</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav gap-3 ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active text-light" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/tasks">Tasks</a>
+                <a class="nav-link text-light" href="/tasks">Tasks</a>
               </li>
               {%if user.is_authenticated%}
                 <li class="nav-item">
-                    <li><a class="nav-link" href="/logout">Log out</a></li>
+                    <a class="nav-link text-light" href="/logout">Log out</a>
                 </li>
                 {%else%}
                 <li class="nav-item">
-                    <li><a class="nav-link" href="/signIn">Sign In</a></li>
+                    <a class="nav-link text-light" href="/signIn">Sign In</a>
                 </li>
                 <li class="nav-item">
-                    <li><a class="nav-link" href="/signup">Sign Up</a></li>
+                    <a class="nav-link text-light" href="/signup">Sign Up</a>
                 </li>
               {%endif%}
             </ul>
