se agrego el formulario para el modelo Task y se eliminaron todos los usuarios creados de prueba y se renderiza correctamente cada tarea en tasks.html

--- a/tasks/templates/create_tasks.html
+++ b/tasks/templates/create_tasks.html
@@ -4,4 +4,12 @@
 
     <h1>Create task</h1>
 
+    {{error}}
+
+    <form method="post">
+        {%csrf_token%}
+        {{form.as_p}}
+        <input class="btn btn-success" type="submit" value="Add task">
+    </form>
+
 {%endblock%}
