--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -4,5 +4,11 @@
 
     <h1>Tasks</h1>
 
+    {%for task in tasks%}
+        <p>
+            {{task}}
+        </p>
+    {%endfor%}
+
 {%endblock%}
 
