--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -22,6 +22,9 @@
               <li class="nav-item">
                 <a class="nav-link text-light" href="/tasks">Tasks</a>
               </li>
+              <li class="nav-item">
+                <a href="/createTasks" class="nav-link text-light">Create task</a>
+              </li>
               {%if user.is_authenticated%}
                 <li class="nav-item">
                     <a class="nav-link text-light" href="/logout">Log out</a>
