--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -2,13 +2,31 @@
 
 {%block content%}
 
-    <h1>Tasks</h1>
+    <h1 class="text-center mt-3 fs-1 border-3 border-bottom border-success d-flex align-center justify-content-center w-100 pb-2">Welcome, these are your tasks</h1>
 
-    {%for task in tasks%}
-        <p>
-            {{task}}
-        </p>
-    {%endfor%}
+    <section class="tasks container-fluid row w-100">
+            {%for task in tasks%}
+                <div class="col-sm-12 col-xl-6 col-lg-4 col-md-4 d-flex justify-content-center align-items-center p-4">
+                    <div class="task p-4 h-100 w-75 bg-dark text-light rounded-2">
+                        <h1>
+                            {{task.title}}
+                        </h1>
+                        <p>
+                            {{task.description}}
+                        </p>
+                        <p>
+                            {%if task.important == True%}
+                                Important task ⚠️
+                            {%else%}
+                                No important task 😇
+                            {%endif%}
+                        </p>
+                        <p>📅Task created on {{task.created}}</p>
+                    </div>
+                </div>
+            {%endfor%}
+    </section>
+
 
 {%endblock%}
 
