--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -7,22 +7,24 @@
     <section class="tasks container-fluid row w-100">
             {%for task in tasks%}
                 <div class="col-sm-12 col-xl-6 col-lg-4 col-md-4 d-flex justify-content-center align-items-center p-4">
-                    <div class="task p-4 h-100 w-75 bg-dark text-light rounded-2">
-                        <h1>
-                            {{task.title}}
-                        </h1>
-                        <p>
-                            {{task.description}}
-                        </p>
-                        <p>
-                            {%if task.important == True%}
-                                Important task ⚠️
-                            {%else%}
-                                No important task 😇
-                            {%endif%}
-                        </p>
-                        <p>📅Task created on {{task.created}}</p>
-                    </div>
+                    <a href="{%url 'taskDetail' task.id%}" style="text-decoration: none;">
+                        <div class="task p-4 h-100 w-75 bg-dark text-light rounded-2">
+                            <h1>
+                                {{task.title}}
+                            </h1>
+                            <p>
+                                {{task.description}}
+                            </p>
+                            <p>
+                                {%if task.important == True%}
+                                    Important task ⚠️
+                                {%else%}
+                                    No important task 😇
+                                {%endif%}
+                            </p>
+                            <p>📅Task created on {{task.created}}</p>
+                        </div>
+                    </a>
                 </div>
             {%endfor%}
     </section>
