se agrego el actualizar tarea

--- a/tasks/templates/taskDetail.html
+++ b/tasks/templates/taskDetail.html
@@ -2,6 +2,10 @@
 
 {%block content%}
 
-    {{task}}
+    <form method="post">
+        {%csrf_token%}
+        {{form}}
+        <input class="btn btn-primary" type="submit" value="Edit">
+    </form>
 
 {%endblock%}
