--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 
-    <h1 class="text-center mt-3 fs-1 border-3 border-bottom border-success d-flex align-center justify-content-center w-100 pb-2">Welcome, these are your tasks</h1>
+    <h1 class="text-center mt-3 fs-1 border-3 border-bottom border-success d-flex align-center justify-content-center w-100 pb-2">Hola! Estas son tus tareas.</h1>
 
     <section class="tasks container-fluid row w-100">
             {%for task in tasks%}
