--- a/tasks/templates/taskDetail.html
+++ b/tasks/templates/taskDetail.html
@@ -5,9 +5,16 @@
     <form method="post">
         {%csrf_token%}
         {{form}}
-        <input class="btn btn-primary" type="submit" value="Edit">
+        <input class="btn btn-primary" type="submit" value="Actualizar">
     </form>
 
     <h3>{{error}}</h3>
+
+    <form action="{% url 'taskCompleted' task.id %}" method="post">
+        {%csrf_token%}
+        <button class="btn btn-success">
+            Marcar como completada
+        </button>
+    </form>
 
 {%endblock%}
