--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -17,12 +17,10 @@
                             </p>
                             <p>
                                 {%if task.important == True%}
-                                    Important task ⚠️
-                                {%else%}
-                                    No important task 😇
+                                    Tarea importante ⚠️
                                 {%endif%}
                             </p>
-                            <p>📅Task created on {{task.created}}</p>
+                            <p>📅Tarea creada el: {{task.created}}</p>
                         </div>
                     </a>
                 </div>
