Se agrego la seccion de tareas completadas

--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -20,7 +20,7 @@
                                     Tarea importante ⚠️
                                 {%endif%}
                             </p>
-                            <p>📅Tarea creada el: {{task.created}}</p>
+                            <p>📅Tarea creada el: {{task.created|date:'D M Y:i'}}</p>
                         </div>
                     </a>
                 </div>
