--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -27,6 +27,9 @@
                   <a class="nav-link text-light" href="/tasks">Tareas</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link text-light" href="/tasksCompleted">Tareas completadas</a>
+                </li>
+                <li class="nav-item">
                   <a href="/createTasks" class="nav-link text-light">Crear tarea</a>
                 </li>
                 <li class="nav-item">
