--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicación de tareas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'estilos.css' %}">
 </head>
 <body>
 
@@ -20,27 +20,27 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav gap-3 ms-auto">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="/">Inicio</a>
+                <a class="nav-link active text-light fs-5" aria-current="page" href="/">Inicio</a>
               </li>
               {%if user.is_authenticated%}
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/tasks">Tareas</a>
+                  <a class="nav-link text-light fs-5" href="/tasks">Tareas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/tasksCompleted">Tareas completadas</a>
+                  <a class="nav-link text-light fs-5" href="/tasksCompleted">Tareas completadas</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/createTasks" class="nav-link text-light">Crear tarea</a>
+                  <a href="/createTasks" class="nav-link text-light fs-5">Crear tarea</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="/logout">Cerrar sesión</a>
+                  <a class="nav-link text-light fs-5" href="/logout">Cerrar sesión</a>
                 </li>
                 {%else%}
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="/signIn">Iniciar sesión</a>
+                    <a class="nav-link text-light fs-5" href="/signIn">Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="/signup">Registrarse</a>
+                    <a class="nav-link text-light fs-5" href="/signup">Registrarse</a>
                 </li>
               {%endif%}
             </ul>
