--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-primary p-2">
+    <nav class="navbar navbar-expand-lg bg-primary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand text-light" href="/"><img src="https://img.icons8.com/?size=100&id=LFB02ASKjxl3&format=png&color=000000" alt="logo"></a>
+          <a class="navbar-brand text-light border-bottom border-3 border-light" href="/">misTareasPlus</a>
           <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
