--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -4,7 +4,7 @@
 
     <h1 class="text-center mt-4 tituloRegistro">Formulario de registro</h1>
 
-    <form class="formRegistro d-flex flex-column align-items-center justify-content-center m-auto border border-2 border-primary p-4 mt-4" method="POST">
+    <form class="formAutenticacion d-flex flex-column align-items-center justify-content-center m-auto border border-2 border-primary p-4 mt-4" method="POST">
         {%csrf_token%}
 
         <div class="mb-3">
