estilos para los mensajes de error en login y registro

--- a/tasks/templates/signIn.html
+++ b/tasks/templates/signIn.html
@@ -20,7 +20,7 @@
     </form>
     
     {%if error%}
-        {{error}}
+        <p class="mensajeError bg-danger text-center text-light w-75 m-auto mt-4 p-3 rounded-3">{{error}}</p>
     {%endif%}
 
 {%endblock%}
