--- a/tasks/static/estilos.css
+++ b/tasks/static/estilos.css
@@ -52,6 +52,10 @@ nav .nav-link:hover{
     background-color: #daeeaa;
 }
 
+.contenedorDetallesTarea{
+    width: 400px;
+}
+
 @media (max-width:800px){
     .tituloBienvenida{
         font-size: 37px;
@@ -70,6 +74,9 @@ nav .nav-link:hover{
         width: 300px;
     }
     .contendedorFormCreateTask{
+        width: 340px;
+    }
+    .contenedorDetallesTarea{
         width: 340px;
     }
 }
