--- a/tasks/templates/taskDetail.html
+++ b/tasks/templates/taskDetail.html
@@ -4,7 +4,7 @@
 
     <h1 class="text-center border-3 border-bottom border-warning p-3 w-75 m-auto">Detalles de la tarea</h1>
 
-    <div class="container mt-3 border border-success border-1 p-3">
+    <div class="contenedorDetallesTask container mt-3 border border-success border-1 p-3">
         <form method="post">
             {%csrf_token%}
             {{form}}
