--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -26,7 +26,7 @@
                 </div>
             {%endfor%}
             {%if noTasks %}
-                <p class="text-center m-auto d-flex justify-content-center align-content-center mt-5 w-50">{{noTasks}}</p>
+                <p class="mensajeError bg-danger text-center text-light w-75 m-auto mt-4 p-3 rounded-3">{{noTasks}}</p>
             {%endif%}
     </section>
 
