--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 
-    <h1 class="text-center mt-4 tituloRegistro">Formulario de registro</h1>
+    <h1 class="text-center mt-4 tituloRegistro border-3 border-bottom border-primary p-3 w-75 m-auto">Formulario de registro</h1>
 
     <form class="formAutenticacion d-flex flex-column align-items-center justify-content-center m-auto border border-2 border-primary p-4 mt-4" method="POST">
         {%csrf_token%}
