--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -29,7 +29,7 @@
                 <p class="mensajeError bg-danger text-center text-light w-75 m-auto mt-4 p-3 rounded-3">{{noTasks}}</p>
             {%endif%}
             {%if imagenUrl%}
-                <img class="mt-3" src="{{imagenUrl}}" alt="4040notfound" width="100">
+                <img class="mt-3 m-auto" src="{{imagenUrl}}" alt="4040notfound" width="200">
             {%endif%}
     </section>
 
