--- a/tasks/templates/tasksCompleted.html
+++ b/tasks/templates/tasksCompleted.html
@@ -31,7 +31,7 @@
     {%endif%}
 
     {%if imagenUrl%}
-        <img class="mt-3" src="{{ imagenUrl }}" alt="notfound404" width="100">
+        <img class="mt-3 m-auto" src="{{ imagenUrl }}" alt="notfound404" width="200">
     {%endif%}
 
 {%endblock%}
