--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -29,7 +29,9 @@
                 <p class="mensajeError bg-danger text-center text-light w-75 m-auto mt-4 p-3 rounded-3">{{noTasks}}</p>
             {%endif%}
             {%if imagenUrl%}
-                <img class="mt-3 m-auto" src="{{imagenUrl}}" alt="4040notfound" width="200">
+                <div class="container m-auto d-flex justify-content-center align-items-center">
+                    <img class="mt-3 m-auto" src="{{ imagenUrl }}" alt="notfound404" width="150">
+                </div>
             {%endif%}
     </section>
 
