--- a/tasks/templates/tasksCompleted.html
+++ b/tasks/templates/tasksCompleted.html
@@ -31,7 +31,10 @@
     {%endif%}
 
     {%if imagenUrl%}
-        <img class="mt-3 m-auto" src="{{ imagenUrl }}" alt="notfound404" width="200">
+        <div class="container m-auto d-flex justify-content-center align-items-center">
+            <img class="mt-3 m-auto" src="{{ imagenUrl }}" alt="notfound404" width="150">
+        </div>
     {%endif%}
-
+    
+    
 {%endblock%}
